// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalListFilters /> should render correctly 1`] = `
<div
  className="mb-15 mt-30"
  id="proposal-list-filter"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Relay(ProposalListToggleViewBtn)
      displayMode="GRID"
      setDisplayMode={[MockFunction]}
      showMapButton={false}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "canDisplayBallot": true,
          "defaultSort": "random",
          "form": Object {
            "categories": Array [
              Object {
                "id": "2",
                "name": "Category1",
              },
            ],
            "commentable": true,
            "costable": true,
            "districts": Array [
              Object {
                "id": "1",
                "name": "Ouagadougou",
              },
            ],
            "objectType": "PROPOSAL",
            "usingAddress": true,
            "usingCategories": true,
            "usingDistrict": true,
            "usingThemes": true,
          },
          "id": "test",
          "proposalArchivedTime": 0,
          "statuses": Array [],
          "voteType": "DISABLED",
          "votesRanking": true,
        }
      }
    />
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(injectIntl(ProposalListSearch)) />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-sorting"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(injectIntl(ProposalListOrderSorting))
        canDisplayBallot={true}
        defaultSort="random"
        objectType="PROPOSAL"
        orderByComments={true}
        orderByCost={true}
        orderByPoints={true}
        orderByVotes={false}
      />
    </Col>
  </Row>
</div>
`;

exports[`<ProposalListFilters /> should render correctly with filters 1`] = `
<div
  className="mb-15 mt-30"
  id="proposal-list-filter"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Relay(ProposalListToggleViewBtn)
      displayMode="GRID"
      setDisplayMode={[MockFunction]}
      showMapButton={false}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "canDisplayBallot": true,
          "defaultSort": "random",
          "form": Object {
            "categories": Array [
              Object {
                "id": "2",
                "name": "Category1",
              },
            ],
            "commentable": true,
            "costable": true,
            "districts": Array [
              Object {
                "id": "1",
                "name": "Ouagadougou",
              },
            ],
            "objectType": "PROPOSAL",
            "usingAddress": true,
            "usingCategories": true,
            "usingDistrict": true,
            "usingThemes": true,
          },
          "id": "test",
          "proposalArchivedTime": 0,
          "statuses": Array [],
          "voteType": "DISABLED",
          "votesRanking": true,
        }
      }
    />
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(injectIntl(ProposalListSearch)) />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-sorting"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(injectIntl(ProposalListOrderSorting))
        canDisplayBallot={true}
        defaultSort="random"
        objectType="PROPOSAL"
        orderByComments={true}
        orderByCost={true}
        orderByPoints={true}
        orderByVotes={false}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-types"
      key="0"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <FormattedMessage
        id="global.select_types"
        values={Object {}}
      >
        <Component />
      </FormattedMessage>
    </Col>
  </Row>
</div>
`;

exports[`<ProposalListFilters /> should render correctly without vote filters filters 1`] = `
<div
  className="mb-15 mt-30"
  id="proposal-list-filter"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Relay(ProposalListToggleViewBtn)
      displayMode="GRID"
      setDisplayMode={[MockFunction]}
      showMapButton={false}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "canDisplayBallot": false,
          "defaultSort": "random",
          "form": Object {
            "categories": Array [
              Object {
                "id": "2",
                "name": "Category1",
              },
            ],
            "commentable": true,
            "costable": true,
            "districts": Array [
              Object {
                "id": "1",
                "name": "Ouagadougou",
              },
            ],
            "usingAddress": true,
            "usingCategories": true,
            "usingDistrict": true,
            "usingThemes": true,
          },
          "id": "test",
          "statuses": Array [],
          "voteType": "DISABLED",
          "votesRanking": true,
        }
      }
    />
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(injectIntl(ProposalListSearch)) />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-sorting"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(injectIntl(ProposalListOrderSorting))
        canDisplayBallot={false}
        defaultSort="random"
        orderByComments={true}
        orderByCost={true}
        orderByPoints={true}
        orderByVotes={false}
      />
    </Col>
  </Row>
</div>
`;
